--- a/ECoupon/package.json
+++ b/ECoupon/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "zeppelin-solidity": "^1.2.0",
     "web3": "0.20.1"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2"
   }
 }
